<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nice_drakGray"
                android:gravity="center"
                android:text="@string/coal_pro"
                android:textColor="@color/color_white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/middle_dis"
                android:layout_marginTop="@dimen/middle_dis"
                android:background="@color/color_white" />

            <TextView
                android:id="@+id/tv_safty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nice_drakGray"
                android:gravity="center"
                android:text="@string/coal_safty"
                android:textColor="@color/color_white" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_door"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nice_drakGray"
                android:gravity="center"
                android:text="@string/coal_door"
                android:textColor="@color/color_white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/middle_dis"
                android:layout_marginTop="@dimen/middle_dis"
                android:background="@color/color_white" />

            <TextView
                android:id="@+id/tv_shaft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nice_drakGray"
                android:gravity="center"
                android:text="@string/coal_shaft"
                android:textColor="@color/color_white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/middle_dis"
                android:layout_marginTop="@dimen/middle_dis"
                android:background="@color/color_white" />

            <TextView
                android:id="@+id/tv_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nice_drakGray"
                android:gravity="center"
                android:text="@string/coal_six"
                android:textColor="@color/color_white" />

        </LinearLayout>


    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>


</LinearLayout>
