<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_main"
        android:id="@+id/ll_imei"
        android:gravity="center"
        android:padding="10dip">

        <ImageView
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_remind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/get_imei"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:src="@mipmap/icon_logo" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/app_login_icon" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/normal_dis"
                android:background="@null"
                android:hint="@string/user_name"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textSize="@dimen/textSize_3" />
        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="30dp"
        android:background="#efefef" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/app_login_pwd" />

            <EditText
                android:id="@+id/ed_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/normal_dis"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/user_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_3" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="30dp"
        android:background="#efefef" />

    <RadioGroup
        android:id="@+id/rgbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_anjian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/safty_super" />

        <RadioButton
            android:id="@+id/rd_meijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/coal_super" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="320dip"
        android:layout_height="45dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/login"
        android:background="@drawable/main_btn_background"
        android:textColor="@color/color_white"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatButton
        android:text="获取公司数据"
        android:layout_marginTop="20dp"
        android:id="@+id/getData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>